FIX: visibility of text on imgs

--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ body {
     padding-top: 5em;
   }
   .main__about--underground {
-    background: transparent;
+    background: white;
     width: 23%;
     position: relative;
     left: 60%;
