--- a/resources/_mainAbout.scss
+++ b/resources/_mainAbout.scss
@@ -199,7 +199,7 @@
         padding-top: 5em;
 
         &--underground{
-            background: transparent;
+            background: white;
             width: 23%;
             position: relative;
             left: 60%;
